# plasma1d

./: ;  CMakeLists.txt  Makefile  README  ROOT_graph.cpp  TestMake  a.out  contributors.txt  gethist.C  gethist.C~  go.sh  graph.gnu  make_output.txt  out.tar  plot_all.sh  root_test.C  run  run_tests  test  test.cpp
data/: .psd_out.dat.swp  E_psd.gnu  U_psd.gnu  density.gnu  field.gnu  gethist.C  graph.gnu  graph_all.gnu  graph_all_out.gnu  mode.gnu  phase.gnu  pot.gnu  psd.gnu  velocity.gnu
gtest-1.7.0/: Makefile  config.status  libtool
gtest-1.7.0/lib/: libgtest_main.la
gtest-1.7.0/lib/.libs/: libgtest.so.0.0.0  libgtest_main.so.0.0.0
gtest-1.7.0/src/.deps/: gtest-all.Plo  gtest_main.Plo
include/: .parameters.h.swp  .psd.h.swp  .run_man.h.swp  .time_history_diagnostics.h.swp  adjacent-coods.h  adjacent_coods.h  adjacent_coods_test.h  altfft.h  altfield.h  density.h  density_diagnostic.h  diagnostics.h  electron.h  energy_diagnostic.h  field.h  field_diagnostic.h  init-pos.h  init_v.h  ion.h  jmod.h  ke_diagnostic.h  mode_diagnostic.h  mom_diagnostic.h  move.h  out_writer.h  parameters.h  particle.h  phase_diagnostic.h  pos_diagnostic.h  pot_diagnostic.h  proton.h  psd.h  run-man.h  run.h  run_man.h  snapshot_diagnostics.h  square_mod.h  time_history_diagnostics.h  to_string.h  transform_wrapper.h  (+7 more)
src/: .adjacent_coods.cpp.swp  .density.cpp.swp  .density_diagnostic.cpp.swp  .energy_diagnostic.cpp.swp  .field.cpp.swp  .init_v.cpp.swp  .ke_diagnostic.cpp.swp  .mode_diagnostic.cpp.swp  .phase_diagnostic.cpp.swp  .pot_diagnostic.cpp.swp  .psd.cpp.swp  .run.cpp.swp  .run_man.cpp.swp  .snapshot_diagnostics.cpp.swp  :w  CMakeLists.txt  adjacent-coods.cpp  adjacent_coods.cpp  alt_weighing.cpp  altfft.cpp  altfield.cpp  density.cpp  density_diagnostic.cpp  diagnostics.cpp  electron.cpp  energy_diagnostic.cpp  field.cpp  field_diagnostic.cpp  init-pos.cpp  init_pos.cpp  init_v.cpp  ion.cpp  jmod.cpp  ke_diagnostic.cpp  mode_diagnostic.cpp  mom_diagnostic.cpp  move.cpp  out_writer.cpp  particle.cpp  phase_diagnostic.cpp  (+18 more)
unit_test/: CMakeLists.txt  Makefile  adjacent-coods.cpp  adjacent_coods_test.cpp  altfield.cpp  complex_transform_wrapper_test.cpp  density.cpp  density_test.cpp  electron.cpp  field_test.cpp  jmod.cpp  main_test.cpp  move.cpp  proton.cpp  run  run-man.cpp  transform_wrapper_test.cpp  transform_wrapper_test.h  unit_run.cpp  weighing_test.cpp  wrap_around_test.cpp
